--- a/leeyerin1/index.html
+++ b/leeyerin1/index.html
@@ -11,9 +11,9 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600" rel="stylesheet" />
   <link rel="stylesheet" href="css/font-awesome.min.css" />
-  <link rel="stylesheet" href="css/main.min.css" media="screen and (min-width : 851px)" />
+  <link rel="stylesheet" href="css/main.css" media="screen and (min-width : 851px)" />
   <!-- origin file :: css/main.css or scss/main.scss -->
-  <link rel="stylesheet" href="css/m_main.min.css" media="screen and (max-width : 850px)" />
+  <link rel="stylesheet" href="css/m_main.css" media="screen and (max-width : 850px)" />
   <!-- origin file :: css/m_main.css or scss/m_main.scss -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script type="text/javascript" src="js/theordinary.js"></script>
