html5 markup edit

--- a/leeyerin1/index.html
+++ b/leeyerin1/index.html
@@ -44,7 +44,7 @@
         <div id="main" class="content">
           <ul class="slide">
             <li class="color-black">
-              <article>
+              <div class="img-article">
                 <img src="img/theordinary-item01.jpg" alt="Multi-Peptide Serum 제품 이미지" />
                 <h6 class="s-menu">Hair care</h6>
                 <h3 class="m-menu">Multi-Peptide Serum
@@ -56,10 +56,10 @@
                 <div class="button-area">
                   <a href="#" class="btn btn-start" title="제품 더보기">view more</a>
                 </div>
-              </article>
+              </div>
             </li>
             <li>
-              <article>
+              <div class="img-article">
                 <img src="img/theordinary-item04.jpg" alt="Multi-Peptide Serum 제품 이미지" />
                 <h6 class="s-menu">Hair care</h6>
                 <h3 class="m-menu">Multi-Peptide Serum
@@ -71,10 +71,10 @@
                 <div class="button-area">
                   <a href="#" class="btn btn-start" title="제품 더보기">view more</a>
                 </div>
-              </article>
+              </div>
             </li>
             <li>
-              <article>
+              <div class="img-article">
                 <img src="img/theordinary-item05.png" alt="sea-buckthorn fruit oil 제품 이미지" />
                 <h6 class="s-menu">New Releases</h6>
                 <h3 class="m-menu">100% organic virgin
@@ -86,17 +86,17 @@
                 <div class="button-area">
                   <a href="#" class="btn btn-start" title="제품 더보기">view more</a>
                 </div>
-              </article>
+              </div>
             </li>
             <li>
-              <article>
+              <div class="img-article">
                 <img src="img/theordinary-item03.jpg" alt="company 회사 이미지" />
-              </article>
+              </div>
             </li>
             <li>
-              <article>
+              <div class="img-article">
                 <img src="img/theordinary-item02.jpg" alt="company 회사 이미지" />
-              </article>
+              </div>
             </li>
           </ul>
           <ul class="indicator">
@@ -295,46 +295,56 @@
         <div class="content">
           <h6 class="s-menu">CONNECT WITH US</h6>
           <h3 class="m-menu">Connect</h3>
-          <dl>
-            <a href="#" target="_blank" title="인스타그램 사이트로 이동(새창)">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <span class="text-indent">instagram</span>
-            </a>
-            <article class="sns-wrap">
-              <dt class="s-menu">INSTAGRAM</dt>
-              <dd>데시엠의 제품들을 인스타그램으로 만나보세요.</dd>
-            </article>
-          </dl>
-          <dl>
-            <a href="#" target="_blank" title="페이스북 사이트로 이동(새창)">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <span class="text-indent">facebook</span>
-            </a>
-            <article class="sns-wrap">
-              <dt class="s-menu">FACEBOOK</dt>
-              <dd>데시엠의 제품들을 페이스북으로 만나보세요.</dd>
-            </article>
-          </dl>
-          <dl>
-            <a href="#" target="_blank" title="링크드인 사이트로 이동(새창)">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <span class="text-indent">linkedin</span>
-            </a>
-            <article class="sns-wrap">
-              <dt class="s-menu">LINKEDIN</dt>
-              <dd>최근 소식과 채용 정보를 실시간으로 알려줍니다.</dd>
-            </article>
-          </dl>
-          <dl>
-            <a href="#" target="_blank" title="유튜브 사이트로 이동(새창)">
-                <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                <span class="text-indent">youtube</span>
-            </a>
-            <article class="sns-wrap">
-              <dt class="s-menu">YOUTUBE</dt>
-              <dd>데시엠의 제품들을 유튜브로 즐기세요.</dd>
-            </article>
-          </dl>
+          <ul>
+            <li>
+              <div class="icon-wrap">
+                <a href="#" target="_blank" title="인스타그램 사이트로 이동">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <span class="text-indent">instagram</span>
+                </a>
+              </div>
+              <div class="sns-wrap">
+                <em class="s-menu">INSTAGRAM</em>
+                <p>데시엠의 제품들을 인스타그램으로 만나보세요.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <a href="#" target="_blank" title="페이스북 사이트로 이동">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                  <span class="text-indent">facebook</span>
+                </a>
+              </div>
+              <div class="sns-wrap">
+                <em class="s-menu">FACEBOOK</em>
+                <p>데시엠의 제품들을 페이스북으로 만나보세요.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <a href="#" target="_blank" title="링크드인 사이트로 이동">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                  <span class="text-indent">linkedin</span>
+                </a>
+              </div>
+              <div class="sns-wrap">
+                <em class="s-menu">LINKEDIN</em>
+                <p>최근 소식과 채용 정보를 실시간으로 알려줍니다.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <a href="#" target="_blank" title="유튜브 사이트로 이동">
+                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                  <span class="text-indent">youtube</span>
+                </a>
+              </div>
+              <div class="sns-wrap">
+                <em class="s-menu">YOUTUBE</em>
+                <p>데시엠의 제품들을 유튜브로 즐기세요.</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- /section05 -->
