footer scss mod

--- a/leeyerin1/index.html
+++ b/leeyerin1/index.html
@@ -15,8 +15,8 @@
     <!-- origin file :: css/main.css or scss/main.scss -->
     <link rel="stylesheet" href="css/m_main.min.css" media="screen and (max-width : 850px)" />
     <!-- origin file :: css/m_main.css or scss/m_main.scss -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="js/theordinary.js"></script>
+    <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="js/theordinary.js"></script>
     <meta name="description" content="Clinical Formulations with Integrity." />
     <title>The Ordinary - Clinical Formulations with Integrity.</title>
   </head>
