--- a/leeyerin1/index.html
+++ b/leeyerin1/index.html
@@ -21,15 +21,16 @@
     <title>The Ordinary - Clinical Formulations with Integrity.</title>
   </head>
   <!-- 인덱스 메인 페이지 **********************************
-    1. 기존 홈페이지 theordinary.com 리뉴얼 창작 (개인작업)
+    1. 기존 홈페이지 theordinary.com 리뉴얼 (개인작업)
     2. Iphone X 화면 호환성을 위한 meta viewport-fit=cover 메타 태그 추가
-    3. scss를 이용한 스타일 작업
-    4. ajax를 이용하여 header footer를 include
+    3. scss를 이용한 스타일 시트 작업
+    4. ajax를 이용하여 header footer를 불러옴
     5. 슬라이드 메뉴 구현 / 스크롤 발생시 고정헤더로 높이를 줄여 컨텐츠 가림 최소화
-    6. 슬라이드 이미지 display block, opacity로 fadein-out 전환 효과 / 인디케이터 li 갯수만큼 자동생성
+    6. 슬라이드 이미지 display block, opacity로 fadein-out 전환 효과 / 인디케이터 li 갯수만큼 자동생성 (현재는 컨텐츠가 적어 비활성화)
     7. max-width가 850 이하일때 모바일 반응형 지원
     8. ie9 이상 지원
-    9. tab 접근성을 위한 모든 페이지에 본문 바로가기 btn 삽입
+    9. 키보드 접근성(tab 접근성) 지원
+    10. 모든 페이지에 본문 바로가기 버튼 삽입
   ************************************************* -->
   <body class="main-page">
     <div id="wrapper">
