--- a/leeyerin1/index.html
+++ b/leeyerin1/index.html
@@ -31,6 +31,7 @@
     8. ie9 이상 지원
     9. 키보드 접근성(tab 접근성) 지원
     10. 모든 페이지에 본문 바로가기 버튼 삽입
+    11. section 패럴렉스 스크롤 js (ie 10부터 지원)
   ************************************************* -->
   <body class="main-page">
     <div id="wrapper">
@@ -127,7 +128,7 @@
       <!-- /section01 -->
       <!-- section02 -->
       <section id="section02" class="section section02 trigger">
-        <div class="content">
+        <div class="content scroll">
           <h6 class="s-menu">Top Sellers</h6>
           <h3 class="m-menu">Best Item</h3>
           <div class="more-btn">
@@ -172,7 +173,7 @@
       <!-- /section02 -->
       <!-- section03 -->
       <section id="section03" class="section section03 trigger">
-        <div class="content">
+        <div class="content scroll">
           <h6 class="s-menu">Regimen Guide</h6>
           <h3 class="m-menu">Example Regimens</h3>
           <p>디 오디너리의 여러 제형을 단일 요법으로 결합하는 방법에 대한 제안을 제공합니다.
@@ -293,7 +294,7 @@
       <!-- /section04 -->
       <!-- section05 -->
       <section id="section05" class="section section05">
-        <div class="content">
+        <div class="content scroll">
           <h6 class="s-menu">CONNECT WITH US</h6>
           <h3 class="m-menu">Connect</h3>
           <ul>
