--- a/leeyerin1/index.html
+++ b/leeyerin1/index.html
@@ -20,7 +20,14 @@
     <meta name="description" content="Clinical Formulations with Integrity." />
     <title>The Ordinary - Clinical Formulations with Integrity.</title>
   </head>
-  <!-- 인덱스 메인 페이지 **********************************
+  <!-- 디오디너리 사이트 리뉴얼 작업 *******************
+
+    git url = ' https://github.com/ye-r1/theordinary ';
+
+    //작업 페이지 = 총 8페이지
+    메인 + 회사소개 . 비타민C . 자주묻는질문 . 로그인 . 회원가입 . 검색 . 매장안내
+
+    인덱스 메인 페이지 **********************************
     1. 기존 홈페이지 theordinary.com 리뉴얼 (개인작업)
     2. Iphone X 화면 호환성을 위한 meta viewport-fit=cover 메타 태그 추가
     3. scss를 이용한 스타일 시트 작업
