--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="author" content="The Ordinary" />
     <meta name="apple-mobile-web-app-title" content="디 오디너리" />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600" rel="stylesheet" />
+    <link href="//fonts.googleapis.com/css?family=Noto+Sans+KR:400,500&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
+    <link href="//fonts.googleapis.com/css?family=Montserrat:500,600" rel="stylesheet" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/main.min.css" media="screen and (min-width : 851px)" />
     <!-- origin file :: css/main.css or scss/main.scss -->
     <link rel="stylesheet" href="css/m_main.min.css" media="screen and (max-width : 850px)" />
     <!-- origin file :: css/m_main.css or scss/m_main.scss -->
-    <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/theordinary.js"></script>
     <meta name="description" content="Clinical Formulations with Integrity." />
     <title>The Ordinary - Clinical Formulations with Integrity.</title>
